--- a/src/AndroidDeviceRenderer.mxml
+++ b/src/AndroidDeviceRenderer.mxml
@@ -18,12 +18,12 @@
 			public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.4, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
 			
 			[Bindable]
-			private var device:Device;
+			private var device:AndroidDevice;
 			
 			override public function set data(value:Object):void
 			{
 				super.data = value;
-				this.device = value as Device;
+				this.device = value as AndroidDevice;
 			}
 			
 			protected function restart_clickHandler(event:MouseEvent):void
@@ -105,5 +105,6 @@
 			<s:BitmapImage source="assets/icons/24/restart.png" smooth="true" smoothingQuality="high"/>
 		</s:Group>
 	</s:HGroup>
-	
+	<s:BitmapImage left="8" top="16" width="16" height="16" alpha="0.7"
+				   source="assets/icons/20/android.png" verticalCenter="0"/>
 </s:ItemRenderer>
