--- a/src/renderer/SimulatorDeviceRenderer.mxml
+++ b/src/renderer/SimulatorDeviceRenderer.mxml
@@ -5,11 +5,11 @@
 				autoDrawBackground="true" height="40">
 	<fx:Script>
 		<![CDATA[
-			import device.Simulator;
-			
 			import flash.filters.BitmapFilterQuality;
 			
 			import spark.filters.DropShadowFilter;
+			
+			import device.Simulator;
 			
 			public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
 
@@ -33,6 +33,18 @@
 				sim.startStop()
 			}
 			
+			protected function button_rollOverHandler(event:MouseEvent):void
+			{
+				if(sim.phase == Simulator.RUN){
+					offButton.visible = true;
+				}
+			}
+			
+			protected function button_rollOutHandler(event:MouseEvent):void
+			{
+				offButton.visible = false;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -53,9 +65,10 @@
 		
 
 		<s:Group buttonMode="true" click="startStopButton_clickHandler(event)"
-				 toolTip="{sim.tooltip}" enabled="{sim.phase!=Simulator.WAIT}">
+				 toolTip="{sim.tooltip}" enabled="{sim.phase!=Simulator.WAIT}"
+				 rollOver="button_rollOverHandler(event)" rollOut="button_rollOutHandler(event)">
 			<s:BitmapImage id="iconStatus" source="assets/icons/24/{sim.phase}.png" smooth="true" smoothingQuality="high"/>
-			<s:BitmapImage source="assets/icons/24/off.png" smooth="true" smoothingQuality="high"
+			<s:BitmapImage id="offButton" source="assets/icons/24/shutdown.png" smooth="true" smoothingQuality="high"
 						   visible="false"/>
 		</s:Group>
 	</s:HGroup>
