--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -10,9 +10,7 @@
 		<![CDATA[
 			import com.greensock.TweenMax;
 			
-			import device.AvailableDevices;
-			import device.AvailableSimulators;
-			import device.SimulatorDevice;
+			import simulator.SimulatorDevice;
 			
 			import event.SimulatorEvent;
 			
@@ -30,16 +28,16 @@
 			private var port:String = "8080";
 			
 			[Bindable]
-			private var devices:AvailableDevices;
+			private var devices:RunningDevicesManager;
 			
 			[Bindable]
-			private var simulators:AvailableSimulators;
+			private var simulators:AvailableSimulatorsManager;
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
-				simulators = new AvailableSimulators();
-				simulators.addEventListener(AvailableSimulators.SIMULATOR_STATUS_CHANGED, simulatorStatusChanged, false, 0, true);
-				devices = new AvailableDevices(port);
+				simulators = new AvailableSimulatorsManager();
+				simulators.addEventListener(AvailableSimulatorsManager.SIMULATOR_STATUS_CHANGED, simulatorStatusChanged, false, 0, true);
+				devices = new RunningDevicesManager(port);
 			}
 			
 			protected function simulatorStatusChanged(ev:SimulatorEvent):void
