--- a/src/renderer/SimulatorDeviceRenderer.mxml
+++ b/src/renderer/SimulatorDeviceRenderer.mxml
@@ -9,7 +9,7 @@
 			
 			import spark.filters.DropShadowFilter;
 			
-			import device.IosSimulator;
+			import simulator.IosSimulator;
 			
 			public static const dropShadowFilterMiddle:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.2, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
 
