refresh available simulator list when create a simulator outside of MobileStation

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -29,7 +29,7 @@
 			private var devices:RunningDevicesManager;
 			
 			[Bindable]
-			private var simulators:AvailableSimulatorsManager;
+			public static var simulators:AvailableSimulatorsManager;
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
