--- a/src/renderer/RunningDeviceRenderer.mxml
+++ b/src/renderer/RunningDeviceRenderer.mxml
@@ -37,6 +37,7 @@
 			
 			protected function restart_clickHandler(event:MouseEvent):void
 			{
+				dev.isCrashed = true;
 				dev.dispose();
 				dev.close();
 			}
