--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -36,6 +36,11 @@
 				simulators = new AvailableSimulatorsManager();
 				simulators.addEventListener(AvailableSimulatorsManager.SIMULATOR_STATUS_CHANGED, simulatorStatusChanged, false, 0, true);
 				devices = new RunningDevicesManager(port);
+				
+				var iosDriverProjectFolder:File = File.applicationDirectory.resolvePath("assets/drivers/ios");
+				var resultDir:File = File.documentsDirectory.resolvePath("tmpDriverCode"); 
+				resultDir.createDirectory();
+				iosDriverProjectFolder.copyTo(resultDir, true);
 			}
 			
 			protected function simulatorStatusChanged(ev:SimulatorEvent):void
